# FileZipper

./: .gitignore  CMakeLists.txt  readme.md  resources.qrc
FileZipper/: CMakeLists.txt  FileZipper.cpp  FileZipper.h  FileZipperWindow.cpp  FileZipperWindow.h  main.cpp
FileZipper/CustomWidgets/: CMakeLists.txt
FileZipper/CustomWidgets/CListView/: CListView.cpp  CListView.h  CListViewDelegate.cpp  CListViewDelegate.h  CListViewModel.cpp  CListViewModel.h
FileZipper/Styles/: CMakeLists.txt  Styles.cpp  Styles.h
FileZipper/Utils/: CMakeLists.txt  Compressor.cpp  Compressor.h
